# laba_tg_bot

./: .gitignore  .mypy.ini  Dockerfile  README.md  amvera.yml  app.py  consts.py  handlers.py  lab_state.py  main.py  pyproject.toml  requirements.txt
.docker/: .env  Dockerfile  docker-compose.yml
app/: handlers.py
src/: config.py  consts.py  handlers.py  keyboards.py  lab_state.py  logger_config.py  main.py  vk_bot.py  vk_keyboards.py
src/configs/: __init__.py  config.py  consts.py  logger_config.py
src/laba/: __init__.py  laba_api.py  laba_manager.py
src/telegram/: entry.py  handlers.py  keyboards.py
src/vk/: entry.py  vk_keyboards.py
utils/: lab_state.py
